--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -12,7 +12,7 @@
           stroke-linecap="round" stroke-width="10"></line>
       </svg>
     </div>
-    <h1 class="title">Mieles en Stock</h1>
+    <h1 class="title">{{'Titles.HoneyStock'| translate}}</h1>
   </div>
   <section>
     <app-stock-honey>
@@ -27,7 +27,7 @@
           stroke-linecap="round" stroke-width="10"></line>
       </svg>
     </div>
-    <h1 class="title">Material en Stock</h1>
+    <h1 class="title">{{'Titles.MaterialStock'| translate}}</h1>
   </div>
   <!-- <section>
     <app-stock-material></app-stock-material>
