estilos botones y la laineas a la derercha en caso de idioma araba

--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -1,4 +1,4 @@
-<section>
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
   <form>
     <input type="text" placeholder="{{'Placeholder.Filter_By_City'| translate}}" #filter>
