--- a/src/assets/css/button-styles.css
+++ b/src/assets/css/button-styles.css
@@ -16,11 +16,11 @@
         color: var(--primary-color);
         font-size: 1.0rem;
         font-weight: 700;
-        line-height: 2;
+        line-height: 1;
         position: relative;
         border: none;
         cursor: pointer;
-        border-radius: 10px;
+        border-radius: 20px;
         transition: 0.5s;
         box-shadow: 0 0 10px #363636, inset 0 0 10px var(--shadow-color);
         padding: 10px 20px;
@@ -61,3 +61,74 @@
         margin-bottom: 6px;
         animation: motion 1s linear infinite;
       }
+
+      /** #####################################################
+    #   BOTTON ADD CART                                 #
+    #####################################################*/
+
+
+
+.CartBtn {
+  width: 140px;
+  height: 40px;
+  border-radius: 12px;
+  border: none;
+  background-color: rgb(58, 56, 50);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition-duration: .5s;
+  overflow: hidden;
+  box-shadow: 0px 5px 10px var(--box-shadow-color);
+  position: relative;
+}
+
+
+.IconContainer {
+  position: absolute;
+  left: -50px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 2;
+  transition-duration: .5s;
+}
+
+.icon {
+  border-radius: 1px;
+}
+
+.text {
+  height: 100%;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--honey-color);
+  z-index: 1;
+  transition-duration: .5s;
+  font-size: 1.04em;
+  font-weight: 600;
+}
+
+.CartBtn:hover .IconContainer {
+  transform: translateX(58px);
+  border-radius: 40px;
+  transition-duration: .5s;
+}
+
+.CartBtn:hover .text {
+  transform: translate(10px, 0px);
+  transition-duration: .5s;
+}
+
+.CartBtn:active {
+  transform: scale(0.95);
+  transition-duration: .5s;
+}
