--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -1,9 +1,9 @@
 <section class="listing">
     <div class="image-container">
-        <div class="discount" *ngIf="housingLocation.discount !==0">
-            <p>DTO {{ housingLocation.discount }} %</p>
+        <div class="discount" >
+            <p>DTO {{ housingLocation.discounts }} %</p>
         </div>
-        <img class="listing-photo animated-img" [src]="housingLocation.photo"
+        <img class="listing-photo animated-img" [src]="housingLocation.image"
             alt="Exterior photo of {{housingLocation.name}}" [routerLink]="['/details', housingLocation.id]">
 
     </div>
