--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -9,7 +9,8 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="product-info">
-                        <button class="CartBtn honey-color" (click)="fileInput.click()">{{'Action.UploadImage'|translate}}
+                        <button class="CartBtn honey-color"
+                            (click)="fileInput.click()">{{'Action.UploadImage'|translate}}
                         </button>
                         <input type="file" #fileInput (change)="onFileChange($event)" style="display: none;" />
                     </div>
@@ -17,8 +18,8 @@
                 <div class="flex-col">
                     <div class="cart-item">
                         <div class="cart-item-actions">
-                            <div class="form-inline-select">
-                                <label for="typeSelector">{{'Item.Type'|translate}}: </label>
+                            <div class="form-inline-select  flex-container-col">
+                                <label for="typeSelector">{{'Item.Type'|translate}} </label>
                                 <div class="custom-select-wrapper">
                                     <select id="typeSelector" [(ngModel)]="product.type"
                                         class="form-control custom-select" name="productType">
@@ -30,17 +31,9 @@
                                     </select>
                                 </div>
                             </div>
-                            <label>{{'Item.Name'| translate}}: <input [(ngModel)]="product.name" name="productName"></label>
-                            <label>{{'Item.Description'| translate}}: <input [(ngModel)]="product.description"
-                                    name="productDescription"></label>
-                            <label>{{'Item.Stock'| translate}}: <input [(ngModel)]="product.stock" name="productStock"></label>
-                        </div>
-                    </div>
-                    <div class="cart-item">
-                        <div class="cart-item-actions">
 
-                            <div class="form-inline-select">
-                                <label for="stateSelector">{{'Item.State'| translate}}: </label>
+                            <div class="form-inline-select  flex-container-col">
+                                <label for="stateSelector">{{'Item.State'| translate}}</label>
                                 <div class="custom-select-wrapper">
                                     <select id="stateSelector" [(ngModel)]="product.state"
                                         class="form-control custom-select" name="productState">
@@ -50,8 +43,8 @@
                                 </div>
                             </div>
 
-                            <div class="form-inline-select">
-                                <label for="categorySelector">{{'Item.Category'| translate}}: </label>
+                            <div class="form-inline-select  flex-container-col">
+                                <label for="categorySelector">{{'Item.Category'| translate}} </label>
                                 <div class="custom-select-wrapper">
                                     <select id="categorySelector" [(ngModel)]="product.category"
                                         class="form-control custom-select" name="productCategory">
@@ -65,40 +58,75 @@
                                     </select>
                                 </div>
                             </div>
-                            <label>City: <input [(ngModel)]="product.city" name="productCity"></label>
+
                         </div>
                     </div>
                     <div class="cart-item">
                         <div class="cart-item-actions">
+                            <div class="flex-container-col">
+                                <label>{{'Item.Name'| translate}} </label>
+                                <input type="text" class="input"
+                                        [(ngModel)]="product.name" name="productName">
+                            </div>
+
+                            <div class="flex-container-col">
+                                <label>{{'Item.Description'| translate}} </label>
+                                <input type="text" class="input"
+                                        [(ngModel)]="product.description" name="productDescription">
+                            </div>
+
+                            <div class="flex-container-col">
+                                <label>{{'Item.Stock'| translate}} </label>
+                                <input type="number" class="input"
+                                        [(ngModel)]="product.stock" name="productStock">
+                            </div>
+
+                            <div class="flex-container-col">
+                                <label>{{'City'| translate}} </label>
+                                <input type="text" class="input"
+                                        [(ngModel)]="product.city" name="productCity">
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <div class="cart-item-actions">
 
 
-                            <div class="form-inline-select">
-                                <label for="weightSelector">{{'cart.CartItems.Weight'|translate}}: </label>
+                            <div class="form-inline-select  flex-container-col flex-container-col">
+                                <label for="weightSelector">{{'cart.CartItems.Weight'|translate}} </label>
                                 <div class="custom-select-wrapper">
-                                  <select id="weightSelector" [(ngModel)]="product.weight"
-                                          class="form-control custom-select" name="productWeight" 
-                                          (change)="onWeightChange(product)">
-                                    <option value="">{{'cart.CartItems.Weight'|translate}}</option>
-                                    <option value="1000">1000g</option>
-                                    <option value="500">500g</option>
-                                    <option value="250">250g</option>
-                                  </select>
+                                    <select id="weightSelector" [(ngModel)]="product.weight"
+                                        class="form-control custom-select" name="productWeight"
+                                        (change)="onWeightChange(product)">
+                                        <option value="">{{'cart.CartItems.Weight'|translate}}</option>
+                                        <option value="1000">1000g</option>
+                                        <option value="500">500g</option>
+                                        <option value="250">250g</option>
+                                    </select>
                                 </div>
-                              </div>
-                              
-                              <label>{{'cart.CartItems.Price'|translate}}: 
-                                <input [(ngModel)]="product.selectedPrice" name="productPrice">
-                              </label>
-                              <label>{{'Item.DTO'|translate}}: 
-                                <input [(ngModel)]="product.selectedDto" name="productDiscount">
-                              </label>
+                            </div>
+                            <div class="flex-container-col">
+                                <label>{{'cart.CartItems.Price'|translate}}</label>
+                                <input type="number" class="input" [(ngModel)]="product.selectedPrice"
+                                name="productPrice">
+                            </div>
+
+                            <div class="flex-container-col">
+                                <label>{{'Item.DTO'|translate}} </label>
+                                <input type="number" class="input" [(ngModel)]="product.selectedDto"
+                                name="productDiscount">
+                            </div>
+
                         </div>
 
                     </div>
                 </div>
 
             </div>
-            <button type="button" class="button_main" (click)="saveChanges(product)">{{'Action.Save'|translate}}</button>
+            <button type="button" class="button_main"
+                (click)="saveChanges(product)">{{'Action.Save'|translate}}</button>
         </div>
     </div>
 
@@ -112,14 +140,15 @@
                 <div class="flex-container">
                     <div class="product-card">
                         <div class="product-image">
-                            <img [src]="newProduct.image" alt="Exterior photo of {{newProduct.name}}" alt="">
+                            <img [src]="newProduct.image" alt="Exterior photo of {{newProduct.name}}">
                             <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
                             <div class="overlay"></div>
                         </div>
                         <div class="product-info">
                             <p>{{'Action.UploadImage'|translate}}</p>
 
-                            <button class="CartBtn honey-color" (click)="fileInput.click()">{{'Action.UploadImage'|translate}}
+                            <button class="CartBtn honey-color"
+                                (click)="fileInput.click()">{{'Action.UploadImage'|translate}}
                             </button>
                             <input type="file" #fileInput (change)="onFileChange($event)" style="display: none;" />
                         </div>
@@ -127,9 +156,8 @@
                     <div class="flex-col">
                         <div class="cart-item">
                             <div class="cart-item-actions">
-
-                                <div class="form-inline-select">
-                                    <label for="typeSelector">type: </label>
+                                <div class="form-inline-select  flex-container-col">
+                                    <label for="typeSelector">{{'Item.Type'|translate}} </label>
                                     <div class="custom-select-wrapper">
                                         <select id="typeSelector" [(ngModel)]="newProduct.type"
                                             class="form-control custom-select" name="productType">
@@ -141,16 +169,9 @@
                                         </select>
                                     </div>
                                 </div>
-                                <label>{{'Item.Name'|translate}}: <input [(ngModel)]="newProduct.name" name="productName"></label>
-                                <label>{{'Item.Description'|translate}}: <input [(ngModel)]="newProduct.description"
-                                        name="productDescription"></label>
-                                <label>{{'Item.Stock'|translate}}: <input [(ngModel)]="newProduct.stock" name="productStock"></label>
-                            </div>
-                        </div>
-                        <div class="cart-item">
-                            <div class="cart-item-actions">
-                                <div class="form-inline-select">
-                                    <label for="stateSelector">{{'Item.State'|translate}}: </label>
+
+                                <div class="form-inline-select  flex-container-col">
+                                    <label for="stateSelector">{{'Item.State'|translate}} </label>
                                     <div class="custom-select-wrapper">
                                         <select id="stateSelector" [(ngModel)]="newProduct.state"
                                             class="form-control custom-select" name="productState">
@@ -160,9 +181,8 @@
                                     </div>
                                 </div>
 
-
-                                <div class="form-inline-select">
-                                    <label for="categorySelector">{{'Item.Category'|translate}}: </label>
+                                <div class="form-inline-select  flex-container-col">
+                                    <label for="categorySelector">{{'Item.Category'|translate}} </label>
                                     <div class="custom-select-wrapper">
                                         <select id="categorySelector" [(ngModel)]="newProduct.category"
                                             class="form-control custom-select" name="productCategory">
@@ -178,19 +198,66 @@
                                 </div>
 
 
-                                <label>City: <input [(ngModel)]="newProduct.city" name="productCity"></label>
+                            </div>
+                        </div>
+                        <div class="cart-item">
+                            <div class="cart-item-actions">
+
+
+                                <label>{{'Item.Name'|translate}} <input type="text" class="input"
+                                        [(ngModel)]="newProduct.name" name="productName"></label>
+                                <label>{{'Item.Description'|translate}} <input type="text" class="input"
+                                        [(ngModel)]="newProduct.description" name="productDescription"></label>
+                                <label>{{'Item.Stock'|translate}} <input type="number" class="input"
+                                        [(ngModel)]="newProduct.stock" name="productStock"></label>
+                                <label>{{'City'|translate}} <input type="text" class="input"
+                                        [(ngModel)]="newProduct.city" name="productCity"></label>
                             </div>
                         </div>
 
+
                         <div class="cart-item">
                             <div class="cart-item-actions">
-                                <label>{{'cart.CartItems.Price'|translate}} 1000g: <input [(ngModel)]="newProduct.prices['1000']" name="price1000"></label>
-                                <label>{{'cart.CartItems.Price'|translate}} 500g: <input [(ngModel)]="newProduct.prices['500']" name="price500"></label>
-                                <label>{{'cart.CartItems.Price'|translate}} 250g: <input [(ngModel)]="newProduct.prices['250']" name="price250"></label>
-                                
-                                <label>{{'Item.DTO'|translate}} 1000g: <input [(ngModel)]="newProduct.discounts['1000']" name="productDiscount1000"></label>
-                                <label>{{'Item.DTO'|translate}} 500g: <input [(ngModel)]="newProduct.discounts['500']" name="productDiscount500"></label>
-                                <label>{{'Item.DTO'|translate}}250g: <input [(ngModel)]="newProduct.discounts['250']" name="productDiscount250"></label>
+                                <div class="flex-container-col">
+                                    <div class="flex-container-col">
+                                        <label>{{'cart.CartItems.Price'|translate}} 1000g </label>
+                                        <input type="number" class="input" [(ngModel)]="newProduct.prices['1000']"
+                                            name="price1000">
+                                    </div>
+                                    <div class="flex-container-col">
+                                        <label>{{'Item.DTO'|translate}} 1000g </label>
+                                        <input type="number" class="input" [(ngModel)]="newProduct.discounts['1000']"
+                                            name="DTO1000">
+                                    </div>
+
+                                </div>
+
+                                <div class="flex-container-col">
+                                    <div class="flex-container-col">
+                                        <label>{{'cart.CartItems.Price'|translate}} 500g </label>
+                                        <input type="number" class="input" [(ngModel)]="newProduct.prices['500']"
+                                            name="price500">
+                                    </div>
+
+                                    <div class="flex-container-col">
+                                        <label>{{'Item.DTO'|translate}} 500g </label>
+                                        <input type="number" class="input" [(ngModel)]="newProduct.discounts['500']"
+                                            name="DTO500">
+                                    </div>
+
+                                </div>
+                                <div class="flex-container-col">
+                                    <div class="flex-container-col">
+                                        <label>{{'cart.CartItems.Price'|translate}} 250g </label>
+                                        <input type="number" class="input" [(ngModel)]="newProduct.prices['250']"
+                                            name="price250">
+                                    </div>
+                                    <div class="flex-container-col">
+                                        <label>{{'Item.DTO'|translate}}250g</label>
+                                        <input type="number" class="input" [(ngModel)]="newProduct.discounts['250']"
+                                            name="DTO250">
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
