filtrar por tipo

--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -1,4 +1,4 @@
-<section class="listing">
+<section class="listing" *ngIf="housingLocation.type === 'HN'">
     <div class="image-container">
         <div class="discount" >
             <p>DTO {{ housingLocation.discounts }} %</p>
