El componente UploadImgComponent gestiona la selección y carga de la imagen. Una vez cargada, emite el nombre del archivo a su componente padre. El backend en Laravel maneja la carga de imágenes y las guarda en el directorio assets/img, devolviendo el nombre del archivo. El componente StockHoneyComponent recibe el nombre de la imagen y lo guarda en su modelo de producto.

--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -9,10 +9,11 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="product-info">
-                        <button class="CartBtn honey-color"
+                        <!-- <button class="CartBtn honey-color"
                             (click)="fileInput.click()">{{'Action.UploadImage'|translate}}
                         </button>
-                        <input type="file" #fileInput (change)="onFileChange($event)" style="display: none;" />
+                        <input type="file" #fileInput (change)="onFileChange($event)" style="display: none;" /> -->
+                        <app-upload-img (imageUploaded)="onImageUploaded($event)"></app-upload-img>
                     </div>
                 </div>
                 <div class="flex-col">
