la logica de la carga de imagen

--- a/src/app/functionalities/upload-img/upload-img.component.html
+++ b/src/app/functionalities/upload-img/upload-img.component.html
@@ -4,7 +4,7 @@
         <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
         <div class="overlay"></div>
     </div> -->
-    <div class="product-info">
+    <div class="">
         <input type="file" (change)="onFileChange($event)" accept="image/*">
         <button class="CartBtn honey-color" (click)="uploadImage()">{{'Action.UploadImage'|translate}}</button>
     </div>
