--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -4,7 +4,7 @@
             <div class="flex-container">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="./assets/img/{{product.image}}" alt="Exterior photo of {{product.name}}" alt="">
+                        <img src="{{product.image}}" alt="Exterior photo of {{product.name}}" alt="">
                         <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
                         <div class="overlay"></div>
                     </div>
